# depfresh

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSING.md  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  checking-updates.md  cli-reference.md  configuration.md  ecosystems.md  extending.md  installation.md  library.md  quickstart.md  scanning.md  updating.md
src/depfresh/: __init__.py  __main__.py  bump.py  cli.py  config.py  models.py  resolver.py  scanner.py  updater.py  vcs.py  versioning.py
src/depfresh/editors/: __init__.py  base.py  dotnet.py  golang.py  java.py  node.py  php.py  python.py  registry.py  ruby.py  rust.py
src/depfresh/forge/: __init__.py  _http.py  base.py  detect.py  github.py  gitlab.py
src/depfresh/parsers/: __init__.py  base.py  dotnet.py  golang.py  node.py  php.py  ruby.py  rust.py
tests/: test_bump.py  test_cli.py  test_config.py  test_editors.py  test_forge.py  test_parsers.py  test_resolver.py  test_updater.py  test_vcs.py  test_versioning.py
