[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depfresh"
version = "0.1.0"
description = "A Renovate-like dependency scanner that finds and parses dependency manifests across ecosystems."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "depfresh" }]
keywords = ["dependencies", "scanner", "renovate", "sbom", "manifest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
]
# Runtime is stdlib-only (tomllib, json, xml.etree). No third-party deps.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
depfresh = "depfresh.cli:main"

[project.urls]
Homepage = "https://github.com/depfresh/depfresh"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
