# Tooling config for the depfresh monorepo.
# Build metadata + per-package licenses live in packages/*/pyproject.toml:
#   packages/depfresh      -> MIT core
#   packages/depfresh-pro  -> AGPL-3.0-or-later / commercial
# There is intentionally no [project] table here; the repo is not a package.

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
mypy_path = ["packages/depfresh/src", "packages/depfresh-pro/src"]
files = ["packages/depfresh/src/depfresh", "packages/depfresh-pro/src/depfresh_pro"]
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["packages/depfresh/tests", "packages/depfresh-pro/tests"]

[tool.coverage.run]
source = ["depfresh", "depfresh_pro"]
